test/error/break_outside_loop.sv
// pattern: encountered break outside of loop
module top;
    initial break;
endmodule
